Eliminated the onLoad for now, just call it inline

--- a/sudoku/sudoku.html
+++ b/sudoku/sudoku.html
@@ -4,13 +4,11 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <title>Sudoku Helper</title>
     <link rel="stylesheet" href="sudoku.css"/>
-    <script type="text/javascript" charset="utf-8" src="sudoku.js"></script>
 </head>
-
-<body onLoad="onLoad()">
+<body>
 <div id="grid"></div>
 <div>Possible values:<span id="possibles"></span></div>
-<select id="predefinedGrids" onchange="onChangeSelect(this)">
-</select>
+<select id="predefinedGrids" onchange="onChangeSelect(this)"></select>
+<script type="text/javascript" charset="utf-8" src="sudoku.js"></script>
 </body>
 </html>
