--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <html>
 <head>
-<title>Does this work?</title>
+<title>Random tomfoolery</title>
 </head>
 <body>
+    <div>
+    <a href="8bit/8bit.html">Paint</a>
+    </div>
+    <div>
+    <a href="sudoku/sudoku.html">Paint</a>
+    </div>
 </body>
 </html>
