--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <a href="8bit/8bit.html">Paint</a>
     </div>
     <div>
-    <a href="sudoku/sudoku.html">Paint</a>
+    <a href="sudoku/sudoku.html">Sudoku isn't fair</a>
     </div>
 </body>
 </html>
