adding in sas-safras

--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <html>
+
 <head>
-<title>Random tomfoolery</title>
+    <title>Random tomfoolery</title>
 </head>
+
 <body>
     <div>
-    <a href="8bit/8bit.html">Paint</a>
+        <a href="8bit/8bit.html">Paint</a>
     </div>
     <div>
-    <a href="sudoku/sudoku.html">Sudoku isn't fair</a>
+        <a href="sudoku/sudoku.html">Sudoku isn't fair</a>
+    </div>
+    <div>
+        <a href="sb/sas.html">Sas-safras</a>
     </div>
 </body>
+
 </html>
